- upload to website
	- win32
		- buildrelease.bat
		- zip up xenowar subdirectory
	- android
		- down in unflobtactical\android\ufoattack_1\bin
		- grab apk and rename
	Go!


- test incredible (from website)
- test galaxy tab (from website)

- Sign & Publish
	- http://developer.android.com/guide/publishing/app-signing.html#ExportWizard
	- publish
	- check on Samsung


Release v2.5

- Higher quality text rendering. Text should look crisper across all screen.
- Support for font modding.
- Hired soldiers sell/fire for much less money. Fixes expoit.
- Aliens should now calculate line of site correctly and not blast walls repeatedly
- Reaction fire AI greatly improved. Should shoot own team, blow up weapons in face, much less often.
- Sometimes units don't scroll onscreen - fixed.
- Some bugs in visibility detection were fixed. Soldiers should no longer stop needlessly 
  when an enemy has already been spotted by a teammate.
- New battleship model.
- Builder.exe is now hardened somewhat against bad inputs, and gives more errors. Particuarly will now detect correct texture sizes.
- Items that are destroyed no longer obscure vision. (Blocking items workes; obscuring items did not.)


Release v2.4 b691 Android / Windows
Now supports mod files, so you can use or create alternate graphics for the game. Also
many gameplay fixes and tweaks to smooth out the geo-game.

- Mod file support! Check out README.txt for info.
- Item descriptions (to some degree)
- Gameplay: lost UFOs now get a cash bonus instead of XP
- Gameplay: research dependencies fixed
- UI: tweaked the inventory screen to hopefully be neater
- Help: new images, cleaned up errors
- Rebalanced begin game vs. end game cash flow (special thanks to Reenen in the forums for feedback on this and other issues.)
- Tap to upgrade weapons / armor in inventory UI
- Fix to research dependencies

Xenowar_688_beta
- Mod file support! Check out README.txt for info.
- Item descriptions